# statistics_for_data_science_and_business_analysis

./: 15_mean_median_mode.py  25_correlation_coefficent.py  32_standard_normal_distribution.ipynb  32_standard_normal_distribution.py  58_test_for_the_mean_-_population_variance_known.ipynb  61_test_for_the_mean_-_population_variance_unknown.ipynb  63_test_for_the_mean_-_dependent_samples.ipynb  65_test_for_the_mean_-_indipendent_samples.ipynb  67_test_for_the_mean_-_independent_samples.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: 32_standard_normal_distribution-checkpoint.ipynb  60_test_for_the_mean_-_population_variance_known-checkpoint.ipynb
